--- a/index.html
+++ b/index.html
@@ -1,10 +1,78 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" dir="rtl">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Intel: Sustainability Through the Ages</title>
   <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.rtl.min.css" />
+  <style>
+    .card {
+      transform: scale(0.7); /* Increase the scale of the cards to 70% of their original size */
+      transform-origin: center;
+    }
+    /* Remove hover effect */
+    .card:hover {
+      transform: none; /* Ensure no scaling or changes on hover */
+    }
+    li {
+      position: relative; /* Ensure positioning for description overlay */
+      background-color: #f8f9fa; /* Light background for the card */
+      border: 1px solid #ddd; /* Subtle border for the card */
+      border-radius: 10px; /* Rounded corners for the card */
+      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Add a shadow for depth */
+      padding: 15px; /* Add padding inside the card */
+      transition: transform 0.3s ease, box-shadow 0.3s ease; /* Smooth hover effect */
+    }
+    li:hover {
+      transform: translateY(-10px); /* Slight lift on hover */
+      box-shadow: 0 6px 10px rgba(0, 0, 0, 0.15); /* Enhance shadow on hover */
+    }
+    .description {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%; /* Make the description span the full width of the card */
+      height: 100%; /* Make the description span the full height of the card */
+      transform: none; /* Remove centering transform */
+      background-color: #0071c5; /* Intel blue background */
+      color: white;
+      padding: 10px;
+      border-radius: 10px; /* Match the card's rounded corners */
+      display: none; /* Hidden by default */
+      text-align: center;
+      font-size: 0.9rem; /* Slightly smaller font for descriptions */
+      box-sizing: border-box; /* Include padding in width/height */
+    }
+    li:hover .description {
+      display: flex; /* Show description when the parent list item is hovered */
+      align-items: center; /* Center content vertically */
+      justify-content: center; /* Center content horizontally */
+    }
+    ul {
+      display: flex; /* Use flexbox for horizontal alignment */
+      flex-wrap: wrap; /* Allow wrapping to the next row if needed */
+      gap: 20px; /* Add spacing between items */
+      justify-content: center; /* Center items horizontally */
+      padding: 0;
+      list-style: none; /* Remove default list styling */
+    }
+    li {
+      flex: 1 1 calc(30% - 20px); /* Increase the size of each card */
+      max-width: 250px; /* Increase the maximum width of each card */
+      text-align: center; /* Center-align content inside each item */
+    }
+    img {
+      width: 100%; /* Make images responsive */
+      height: auto; /* Maintain aspect ratio */
+      border-radius: 8px; /* Match card's rounded corners */
+    }
+    h3 {
+      margin-top: 10px; /* Add spacing above the title */
+      font-size: 1.2rem; /* Adjust font size for better readability */
+      color: #333; /* Darker text for contrast */
+    }
+  </style>
 </head>
 <body>
 
@@ -26,58 +94,38 @@
     <p>Welcome to Intel's sustainability journey! Use this box to explore key highlights and milestones in our history.</p>
   </div>
 
-  <!-- Scrollable Box Section -->
-  <div class="scroll-box">
+  <!-- Cards Section -->
+  <div>
     <ul>
-      <li class="card">
+      <li>
         <img src="img/1.jpg" alt="Intel Founded Image" />
         <h3>1968: Intel Founded</h3>
         <p class="description">Robert Noyce and Gordon Moore rename the newly formed company NM Electronics to Intel Corporation, laying the foundation for decades of technological innovation.</p>
       </li>
-      <li class="card">
+      <li>
         <img src="img/2.jpg" alt="First Microprocessor Image" />
         <h3>1971: First Microprocessor</h3>
         <p class="description">Intel debuts the 4004, the world's first commercial microprocessor, igniting the microprocessor revolution and propelling the future of computing devices.</p>
       </li>
-      <li class="card">
+      <li>
         <img src="img/3.jpg" alt="8086 Processor Image" />
         <h3>1978: 8086 Processor</h3>
         <p class="description">Launch of the 8086 processor, establishing the x86 architecture that drives countless PCs and servers in the modern era.</p>
       </li>
-      <li class="card">
+      <li>
         <img src="img/4.jpg" alt="386 Processor Image" />
         <h3>1985: 386 Processor</h3>
         <p class="description">Intel introduces the 386 processor with 32-bit architecture, ushering in a new era of performance and multitasking for personal computers.</p>
       </li>
-      <li class="card">
-        <img src="img/5.png" alt="Peak GHG Emissions Image" />
-        <h3>2006: Peak GHG Emissions</h3>
-        <p class="description">This year marks Intel's highest annual greenhouse gas emissions for operations. Over subsequent years, Intel invests heavily in chemical abatement, renewable energy, and energy-efficient manufacturing to reverse this trend.</p>
-      </li>
-      <li class="card">
-        <img src="img/6.jpg" alt="RISE Strategy Image" />
-        <h3>2020: RISE Strategy</h3>
-        <p class="description">Intel launches its RISE (Responsible, Inclusive, Sustainable, Enabling) strategy and 2030 goals, aiming to drive industry-wide progress on climate action, water stewardship, and waste reduction.</p>
-      </li>
-      <li class="card">
-        <img src="img/7.png" alt="Net-Zero By 2040 Image" />
-        <h3>2022: Net-Zero By 2040</h3>
-        <p class="description">Intel announces its commitment to achieve net-zero greenhouse gas emissions (Scope 1 and 2) across its global operations by 2040, building on years of environmental initiatives.</p>
-      </li>
-      <li class="card">
-        <img src="img/8.jpg" alt="Renewable Electricity Image" />
-        <h3>2023: Renewable Electricity</h3>
-        <p class="description">The company achieves 99% renewable electricity usage worldwide, helping to drastically lower carbon emissions and driving progress toward Intel's long-term sustainability goals.</p>
-      </li>
-      <li class="card">
-        <img src="img/9.jpeg" alt="Sustainability Summit Image" />
-        <h3>2024: Sustainability Summit</h3>
-        <p class="description">Intel hosts its first Sustainability Summit, uniting suppliers, government officials, and industry leaders to collaborate on next-generation sustainable semiconductor manufacturing.</p>
-      </li>
     </ul>
   </div>
 
-  <p style="text-align: center;">Scroll to view timeline | Hover over cards to learn more!</p>
+  <!-- Cards moved out of the scrollable box -->
+  <div class="additional-cards">
+    <!-- Removed cards 5-9 -->
+  </div>
+
+  <p style="text-align: center;">Hover over cards to learn more!</p>
 
   <footer>
     <p>&copy; 2023 Intel Corporation. All rights reserved. Intel and the Intel logo are trademarks of Intel Corporation or its subsidiaries.</p>
