Add three-column card section and enhance RTL support in styles

--- a/index.html
+++ b/index.html
@@ -120,6 +120,42 @@
     </ul>
   </div>
 
+  <!-- Three-Column Section -->
+  <div class="container my-5">
+    <div class="row text-center">
+      <div class="col-12 col-md-6 col-lg-4 mb-4">
+        <div class="card h-100" style="width: 90%; height: 300px; margin: 0 auto;">
+          <div class="card-body">
+            <h3 class="card-title">RISE Strategy</h3>
+            <p class="card-text" style="white-space: normal; word-wrap: break-word;">
+              Intel's RISE strategy focuses on driving positive global impact through responsible, inclusive, and sustainable practices.
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="col-12 col-md-6 col-lg-4 mb-4">
+        <div class="card h-100" style="width: 90%; height: 300px; margin: 0 auto;">
+          <div class="card-body">
+            <h3 class="card-title">Commitment</h3>
+            <p class="card-text" style="white-space: normal; word-wrap: break-word;">
+              Our commitment to sustainability includes reducing greenhouse gas emissions and achieving net positive water use by 2030.
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="col-12 col-md-6 col-lg-4 mb-4">
+        <div class="card h-100" style="width: 90%; height: 300px; margin: 0 auto;">
+          <div class="card-body">
+            <h3 class="card-title">Water & Waste</h3>
+            <p class="card-text" style="white-space: normal; word-wrap: break-word;">
+              Intel is dedicated to conserving water and minimizing waste, with a focus on recycling and reuse in our operations.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <!-- Cards moved out of the scrollable box -->
   <div class="additional-cards">
     <!-- Removed cards 5-9 -->
